Fixed body width on mobiles

--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,6 @@
 body {
-/*     max-width: 100vw;
-    overflow: hidden; */
+    max-width: 100vw;
+    overflow: hidden;
 }
 
 header {
